testdata/zkc/invalid/fixed_array_02.zkc
//error:3:17-18:array size is not a number or a constant
fn main() {
  var items:[u8,a]
  return
}